src/test/deca/context/invalid/homemade/tests/test_cast_invalid_autre_class.deca
// test invalide de la règle cast

class A {

}

class B {

    int x = 1;
}


{
    B b = new B();
    (A) (b);
}